@@ -1,3 +1,6 @@
+- Resource file download performance improvements via caching and chunked sending
+- Fixed false positive bug when Client connection times out
+
 0.1.1
 - SuiteFinish#post immediately closes the connection
 
